Asset - config - migration

--- a/.env
+++ b/.env
@@ -41,5 +41,10 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/projet-6?serverVersion=15&charset=utf
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+#MAILER_DSN=smtp://607b3dfe6f9178:96ec75ac44d0ed@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://snowtricks38@gmail.com:iqtfnwgikznzjtdw@default
+###< symfony/google-mailer ###
