--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,10 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+knp_paginator:
+    template:
+        pagination:
+            '%kernel.project_dir%/vendor/knplabs/knp-paginator-bundle/templates' 
+
 
 when@test:
     twig:
