--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+check_trick_name:
+    path: /check-trick-name
+    controller: App\Controller\TricksController::checkTrickName
+    methods: [GET, POST]
