--- a/.env
+++ b/.env
@@ -46,5 +46,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/projet-6?serverVersion=15&charset=utf
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://snowtricks38@gmail.com:iqtfnwgikznzjtdw@default
+MAILER_DSN=gmail://snowtricks38@gmail.com:cxhiqezphqfndsoa@default?verify_peer=0
 ###< symfony/google-mailer ###
