--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,3 @@
 framework:
     mailer:
-        dsn: 'smtp://smtp.gmail.com:587?encryption=tls&auth_mode=login&username=snowtricks38@gmail.com&password=SnowTricks38!'
+        dsn: '%env(MAILER_DSN)%'
